namespace java transformer
namespace netstd transformer

service NotifyService
{
	string notify(1:string message),
}